# -Quote-of-the-Day-Rust-AWS-Lambda-and-Step-Functions-Project

./: .gitlab-ci.yml  Cargo.toml  Makefile  README.md
src/: db.rs  main.rs  view.rs
