[package]
name = "tinayiluo_ids721_individualproject4"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "step1"
path = "src/main.rs"

[[bin]]
name = "step2"
path = "src/db.rs"

[[bin]]
name = "step3"
path = "src/view.rs"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]

lambda_runtime = "0.11.1"
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
rand = "0.8.4"
serde = "1"
tokio = { version = "1", features = ["macros"] }

